Реализовал добавление и отображение файлов из папки documents в таблице.

--- a/Task_2.1/Base.lproj/Main.storyboard
+++ b/Task_2.1/Base.lproj/Main.storyboard
@@ -1,24 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SO7-wB-Xt6">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Task_2_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="uFX-2g-pEO">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="DQN-lh-CQs"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="hYG-r8-IKl"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Empty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6x6-xb-KIN">
+                                <rect key="frame" x="164.5" y="429.5" width="85.5" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="XMt-9i-Yk8">
+                                <rect key="frame" x="188.5" y="429.5" width="37" height="37"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="uFX-2g-pEO" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="3l1-CR-ip4"/>
+                            <constraint firstItem="XMt-9i-Yk8" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="48Y-Gp-AeP"/>
+                            <constraint firstAttribute="trailing" secondItem="uFX-2g-pEO" secondAttribute="trailing" id="OSy-hw-gK1"/>
+                            <constraint firstItem="6x6-xb-KIN" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="PJz-dH-wyI"/>
+                            <constraint firstItem="6x6-xb-KIN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="YBC-YC-v5a"/>
+                            <constraint firstItem="uFX-2g-pEO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dtf-uw-x4X"/>
+                            <constraint firstAttribute="bottom" secondItem="uFX-2g-pEO" secondAttribute="bottom" id="kLi-pr-GMx"/>
+                            <constraint firstItem="XMt-9i-Yk8" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="yqD-bJ-b2e"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Photos" id="and-WM-e8L">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="F1Y-IX-aCB">
+                            <connections>
+                                <action selector="addButtonPressed:" destination="BYZ-38-t0r" id="nfa-8b-D6A"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="emptyLabel" destination="6x6-xb-KIN" id="adb-ml-w8p"/>
+                        <outlet property="spinner" destination="XMt-9i-Yk8" id="Cfh-D6-PvD"/>
+                        <outlet property="tableView" destination="uFX-2g-pEO" id="RBD-24-ZOv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="572" y="135"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Ynz-UV-Udm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SO7-wB-Xt6" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="uGX-sj-LBL">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="UOj-Qa-8pX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Yh-7m-0yy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="135"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
