--- a/Task_2.1/Base.lproj/Main.storyboard
+++ b/Task_2.1/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SO7-wB-Xt6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="EIh-Nx-tFK">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -11,7 +11,7 @@
         <!--Photos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Task_2_1" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ImagesViewController" customModule="Task_2_1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,6 +61,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="collectionView" destination="cVG-1C-pHz" id="QP1-P4-gJ6"/>
                         <outlet property="emptyLabel" destination="6x6-xb-KIN" id="adb-ml-w8p"/>
@@ -69,25 +70,76 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="572" y="135"/>
+            <point key="canvasLocation" x="909" y="941"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ynz-UV-Udm">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SO7-wB-Xt6" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="wZX-LO-bby"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="uGX-sj-LBL">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="UOj-Qa-8pX"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ciQ-i9-6Z0"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6Yh-7m-0yy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-370" y="135"/>
+            <point key="canvasLocation" x="-148" y="941"/>
+        </scene>
+        <!--Check Password View Controller-->
+        <scene sceneID="AQg-Dc-QtK">
+            <objects>
+                <viewController id="EIh-Nx-tFK" customClass="CheckPasswordViewController" customModule="Task_2_1" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="32s-8d-K7H">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="hF8-Al-wSb">
+                                <rect key="frame" x="24" y="336.5" width="366" height="89"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGu-ib-a2o">
+                                        <rect key="frame" x="0.0" y="0.0" width="366" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GyV-ot-3zO">
+                                        <rect key="frame" x="149.5" y="58" width="67" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                                        <connections>
+                                            <action selector="buttonPressed" destination="EIh-Nx-tFK" eventType="touchUpInside" id="5xf-kK-cnd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="bGu-ib-a2o" secondAttribute="trailing" id="WY3-y8-j0z"/>
+                                    <constraint firstItem="bGu-ib-a2o" firstAttribute="leading" secondItem="hF8-Al-wSb" secondAttribute="leading" id="y9c-1G-iT6"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7B2-fe-HDP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="7B2-fe-HDP" firstAttribute="trailing" secondItem="hF8-Al-wSb" secondAttribute="trailing" constant="24" id="FUx-b7-JBw"/>
+                            <constraint firstItem="hF8-Al-wSb" firstAttribute="centerY" secondItem="32s-8d-K7H" secondAttribute="centerY" multiplier="0.85" id="WU3-L6-57B"/>
+                            <constraint firstItem="hF8-Al-wSb" firstAttribute="leading" secondItem="7B2-fe-HDP" secondAttribute="leading" constant="24" id="kN6-2d-35z"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="xP3-lF-KIl"/>
+                    <connections>
+                        <outlet property="button" destination="GyV-ot-3zO" id="7CU-Na-Icf"/>
+                        <outlet property="textField" destination="bGu-ib-a2o" id="fgD-he-AiG"/>
+                        <segue destination="SO7-wB-Xt6" kind="presentation" identifier="toFirstMainScreen" modalPresentationStyle="fullScreen" modalTransitionStyle="flipHorizontal" id="tgp-FP-NVn"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PtU-ea-YhS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1294" y="941"/>
         </scene>
     </scenes>
     <resources>
